# SchedLang

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: schedlang-design.md  schedlang-design.zh-CN.md
examples/: demo.sched  inventory.leap2.yaml  inventory.mixed.yaml  inventory.txstate-ssh.yaml  jobs.demo.yaml  txstate_vlmlp.sched
scripts/: watch_inventory  watch_inventory.py
src/slot_scheduler/: backends.py  cli.py  config.py  models.py  schedlang.py  scheduler.py  state.py
tests/: test_config.py  test_schedlang.py  test_scheduler.py
