[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "slot-scheduler"
version = "0.1.0"
description = "A small scheduler for mixed local, SSH, and Slurm experiment slots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" },
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
slot-scheduler = "slot_scheduler.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

